--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
   <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml"/>
   <link rel="manifest" href="/site.webmanifest"/>
   <meta name="theme-color" content="#0b1220"/>
+  <!-- Social sharing -->
+<meta property="og:title" content="Generador Express — recetas, datos, ASCII" />
+<meta property="og:description" content="Genera textos chistosos y sanos para pegar en redes. Funciona offline." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://TU-SITIO.netlify.app" />
+<meta property="og:image" content="https://TU-SITIO.netlify.app/assets/favicon.svg" />
+<meta name="twitter:card" content="summary" />
+
 </head>
 <body>
   <div class="wrap">
