--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <meta property="og:title" content="Generador Express — recetas, datos, ASCII" />
 <meta property="og:description" content="Genera textos chistosos y sanos para pegar en redes. Funciona offline." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://TU-SITIO.netlify.app" />
-<meta property="og:image" content="https://TU-SITIO.netlify.app/assets/favicon.svg" />
+<meta property="og:url" content="https://generador-express.netlify.app" />
+<meta property="og:image" content="https://generador-express.netlify.app/assets/favicon.svg" />
 <meta name="twitter:card" content="summary" />
 
 </head>
