--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
       <h1>Generador Express
         <span class="muted">• recetas (normales/absurdas) • reviews • datos • ASCII</span>
       </h1>
-      <span class="badge">Copiar & Pegar en 1 click</span>
+     <button id="btnCopyTop" class="badge" type="button" aria-label="Copiar y pegar en un click">
+  Copiar & Pegar en 1 click
+</button>
+
     </header>
 
     <div class="grid">
