--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     .actionbar{position:sticky;bottom:0;left:0;right:0;background:#0e1628cc;backdrop-filter:blur(6px);border-top:1px solid rgba(255,255,255,.12);padding:8px;display:flex;gap:8px;z-index:50}
     .actionbar .btn{flex:1}
   </style>
-  <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml"/>
-  <link rel="manifest" href="/site.webmanifest"/>
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml"/>
+  <link rel="manifest" href="site.webmanifest"/>
   <meta name="theme-color" content="#0b1220"/>
   <!-- Social sharing -->
 <meta property="og:title" content="Generador Express — recetas, datos, ASCII" />
@@ -151,6 +151,6 @@
     <button class="btn ok" id="abCopy">Copiar</button>
     <button class="btn warn" id="abPng">PNG</button>
   </div>
-<script defer src="/app.js"></script>
+  <script defer src="app.js"></script>
 </body>
 </html>
