--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Generador Express: Recetas • Reviews • Datos • ASCII</title>
+  <!-- SEO / Social -->
+<meta name="description" content="Genera recetas (normales/absurdas), datos, reviews y ASCII para copiar/pegar. Funciona offline.">
+<link rel="canonical" href="https://rockharr.github.io/generador-express/">
+
+<!-- Open Graph -->
+<meta property="og:title" content="Generador Express — recetas, datos, ASCII">
+<meta property="og:description" content="Genera textos chistosos y sanos para pegar en redes. Funciona offline.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://rockharr.github.io/generador-express/">
+<meta property="og:image" content="https://rockharr.github.io/generador-express/assets/favicon.svg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Generador Express — recetas, datos, ASCII">
+<meta name="twitter:description" content="Genera textos chistosos y sanos para pegar en redes. Funciona offline.">
+<meta name="twitter:image"  content="https://rockharr.github.io/generador-express/assets/favicon.svg">
+
   <style>
     :root{ --bg:#0b1220;--card:#121a2b;--ink:#e8eefc;--muted:#a9b6d7;--brand:#7dd3fc;--ok:#86efac;--warn:#fcd34d; }
     *{box-sizing:border-box}
