--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
           <button class="btn ok" id="btnCopiar">Copiar texto</button>
           <button class="btn warn" id="btnPng">Copiar/Guardar PNG</button>
           <button class="btn" id="btnOtra">Otra versión</button>
+          <button class="btn" id="btnEmpanada">Empanadas de pino 🍽️</button>
           <span class="pill" id="contador">0 caracteres</span>
         </div>
 
@@ -148,6 +149,25 @@
         </div>
       </section>
     </div>
+
+    <details class="card" style="margin-top:12px">
+  <summary>¿Por qué recetas? (historia del fenómeno)</summary>
+  <p style="margin:10px 0; color:#a9b6d7; font-size:14px; line-height:1.55">
+    En Chile, comentar con <strong>recetas</strong> en redes sociales se volvió un código de humor:
+    crítica + ironía, sin nombrar directamente el conflicto. Se hizo masivo en eventos pop
+    (Viña del Mar, shows polémicos, figuras globales) y quedó como “firma cultural”.
+    El chiste: <em>si hay funa… deja tu receta</em>. 🍲🇨🇱
+  </p>
+  <ul style="margin:0 0 10px 18px; color:#e8eefc; font-size:14px">
+    <li>Recetas clásicas: empanadas de pino, pastel de choclo, cazuela.</li>
+    <li>Variante performativa: recetas absurdas (olla cuántica, pan metafísico…).</li>
+    <li>Hoy se reconoce como un meme local exportable: humor + crítica bien a la chilena.</li>
+  </ul>
+  <p class="muted" style="font-size:12px;">
+    *Inspirado en notas de prensa y cultura pop. Usa esto con buena onda y sin hostigar a nadie. ✌️
+  </p>
+</details>
+
 
     <footer>
       <p>Mini‑generador para memes sanos. No fomentamos funas ni doxeo. 🍰</p>
