--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
     /* Action bar fija (mobile) */
     .actionbar{position:sticky;bottom:0;left:0;right:0;background:#0e1628cc;backdrop-filter:blur(6px);border-top:1px solid rgba(255,255,255,.12);padding:8px;display:flex;gap:8px;z-index:50}
     .actionbar .btn{flex:1}
+    /* Preset Empanadas */
+#btnEmpanada { font-size:13px; padding:8px 12px; }
+@media (max-width:600px){
+  #btnEmpanada { width:100%; }
+}
+
   </style>
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml"/>
   <link rel="manifest" href="site.webmanifest"/>
